[package]
name = "universe-wasm"
version = "0.2.0"
edition = "2021"
description = "Native WASM N-body engine (Barnes-Hut + QJL) + Moiré Parallax Engine for cognitive visual learning"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
